--- a/templates/index.html
+++ b/templates/index.html
@@ -98,18 +98,18 @@
                                     </div>
                                  </div>
                                  <div class="col-md-6">
-                                    <form class="transfot">
+                                    <form id= "submit_form" class="transfot" action="/company" method="post">
                                        <div class="col-md-12">
                                           <h3>Your Company information</h3>
                                        </div>
                                        <div class="col-md-12">
-                                          <input class="transfot_form" placeholder="Company Name" type="text" name="Location", id="company_name">
+                                          <input placeholder="Company Name" type="text" name="company_name", id="company_name">
                                        </div>
                                        <div class="col-md-12">
-                                          <input class="transfot_form" placeholder="Problem" type="text" name="To destination", id="problem">
+                                          <input placeholder="Problem" type="text" name="problem", id="problem">
                                        </div>
                                        <div class="col-md-12">
-                                          <input class="transfot_form" placeholder="Solution" type="text" name="Email", id="solution">
+                                          <input placeholder="Solution" type="text" name="solution", id="solution">
                                        </div>
                                        <div class="col-md-12">
                                           <button id= "submit_btn", class="get_now">Submit</button>
