fix: delete print statements

--- a/templates/result.html
+++ b/templates/result.html
@@ -108,7 +108,7 @@
                         <!-- <th style="color:white;">Match Percentage</th> -->
                         {% for item in data %}
                           <tr style="color:white;">
-                            <td style="color:white;">첫번째 칸</td>
+                            <td style="color:white;">{{item.company_name}}</td>
                             <!-- <td style="color:white;">두번째 칸</td> -->
                           </tr>
                         {% endfor %}
